--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "gitf",
-  "version": "1.0.0",
-  "main": "main.js",
+  "name": "git-friend",
+  "version": "1.1.0",
+  "main": "./src/main.js",
   "type": "module",
   "bin": {
     "gitf": "./bin/gitf.js"
   },
   "scripts": {
-    "start": "node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/main.js"
   },
-  "keywords": ["git", "cli", "helper", "git-friend"],
-  "author": "Your Name",
-  "license": "ISC",
+  "keywords": [
+    "git",
+    "cli",
+    "helper",
+    "git-friend"
+  ],
+  "author": "Maruf Ovi",
+  "license": "MIT",
   "description": "A friendly CLI for simplifying Git workflows.",
   "dependencies": {
+    "axios": "^1.7.9",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
+    "inquirer": "^12.3.0",
     "simple-git": "^3.27.0"
   }
 }
