--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "git-friend",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "./src/main.js",
   "type": "module",
   "bin": {
-    "gitf": "./bin/gitf.js"
+    "gitfr": "./bin/gitf.js"
   },
   "scripts": {
     "start": "node ./src/main.js"
